[package]
name = "spingen"
version = "0.1.0"
edition = "2021"
authors = ["Dante Helmore <frostu8@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
bevy_color = { version = "0.15.4", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
eyre = "0.6.12"
color-eyre = "0.6.3"
derive_more = { version = "2.0.1", features = ["display", "error"] }
bincode = "1.3.3"
ahash = "0.8.11"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
