[package]
name = "spingen"
version = "0.1.0"
edition = "2021"
authors = ["Dante Helmore <frostu8@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
bevy_color = { version = "0.15.4", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
eyre = "0.6.12"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "error"] }
bincode = "1.3.3"
ahash = "0.8.11"
im = "15.1.0"
zip = { version = "2.2.3", default-features = false, features = ["deflate", "deflate-flate2", "deflate-zopfli", "deflate64", "lzma", "time", "chrono", "zstd"] }
wad = { git = "https://codeberg.org/frostu8/wad.git" }
png = "0.17.16"
gloo = { version = "0.11.0", features = ["futures"] }
web-sys = { version = "0.3", features = ["File", "FileList", "HtmlInputElement", "Url"] }
wasm-bindgen-futures = "0.4.50"
bytes = "1.10.1"
gif = "0.13.1"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
